[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klingex"
version = "1.2.0"
description = "Official Python SDK for KlingEx Exchange API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "KlingEx", email = "info@klingex.io" }
]
keywords = [
    "klingex",
    "exchange",
    "crypto",
    "trading",
    "api",
    "sdk",
    "bitcoin",
    "cryptocurrency"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://klingex.io"
Documentation = "https://klingex.io/support/api-docs"
Repository = "https://github.com/Klingon-tech/klingex-py"
Issues = "https://github.com/Klingon-tech/klingex-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["klingex"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
